feat(allowed sites): allow notion.site and notion.com url matches for content_scripts execution

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.notion.so/*"],
+      "matches": ["https://*.notion.so/*", "https://*.notion.site/*", "https://*.notion.com/*"],
       "js": ["src/contentScripts/content-script.js"]
     }
   ],
