--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,9 @@
       "js": ["src/contentScripts/content-script.js"]
     }
   ],
-  "permissions": []
+  "permissions": [],
+  "action": {
+    "default_popup": "build/popup.html"
+  }
+
 }
