--- a/manifest.json
+++ b/manifest.json
@@ -11,15 +11,15 @@
         "https://*.notion.com/*"
       ],
       "js": [
-        "src/contentScripts/content-script.js"
+        "src/content/content-script.js"
       ]
     }
   ],
   "background": {
-    "service_worker": "build/background.js"
+    "service_worker": "src/background/background.js"
   },
   "action": {
-    "default_popup": "build/app/popup.html"
+    "default_popup": "src/app/popup.html"
   },
   "permissions": [
     "storage"
